Query the generations
