# src/server/api/findGeneration.js
@@ -1,0 +1,15 @@
+const LogModel = require('./LogModel');
+
+// Post the API Handler.
+module.exports = (req, res) => {
+  console.log(req.query);
+  LogModel.find({generation: req.query.generation}, (error, values) => {
+    if(error) {
+      return res.status(500).send({
+        error
+      });
+    }
+
+    res.status(200).send(values);
+  });
+}
