# src/server/api/getGenerations.js
@@ -1,0 +1,14 @@
+const LogModel = require('./LogModel');
+
+// Post the API Handler.
+module.exports = (req, res) => {
+  LogModel.find().distinct('generation', (error, values) => {
+    if(error) {
+      return res.status(500).send({
+        error
+      });
+    }
+
+    res.status(200).send(values);
+  });
+}
